--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ button:focus {
 
 button.buttonOutline {
   background: white;
-  color: #ff2058;
+  color: #166071;
 }
 
 button.buttonOutline:hover,
